# flutter-pion-bridge

./: .gitignore  CHANGELOG.md  CLAUDE.md  PENDING-TASKS.md  README.md  pubspec.yaml  spec.md
android/: .gitignore  build.gradle
android/src/main/: AndroidManifest.xml
example/: pubspec.yaml
example/integration_test/: plugin_integration_test.dart
example/lib/: main.dart  remote_peer_tab.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/linux/runner/: my_application.cc
example/test/: widget_test.dart
go/: go.mod  go.sum  handler.go  handler_test.go  integration_test.go  main.go  registry.go  registry_test.go  server.go  server_test.go  types.go
go/internal/pionserver/: dcsend.go  dcsend_test.go  handler.go  handler_integration_test.go  pool_test.go  registry.go  registry_test.go  server.go  server_test.go  settings_engine.go  settings_engine_test.go  system_test.go  trace.go  types.go
go/mobile/: mobile.go
go/pion-sctp-patched/: go.mod  rtx_timer.go
ios/: pion_bridge.podspec
ios/Classes/: PionBridgePlugin.swift
ios/Frameworks/PionBridgeGo.xcframework/: Info.plist
lib/: pion_bridge.dart
lib/src/: bridge.dart  data_channel.dart  event_dispatcher.dart  exception.dart  peer_connection.dart  reconnect.dart  resource.dart  types.dart  websocket_connection.dart  ws_message.dart
linux/: CMakeLists.txt  pionbridge_plugin.cc
linux/include/pion_bridge/: pionbridge_plugin.h
macos/: pion_bridge.podspec
macos/Classes/: PionBridgePlugin.swift
scripts/: build_all.sh  build_android.sh  build_ios.sh  build_linux.sh  build_macos.sh  build_windows.sh  check_apk.sh
test/: system_test.dart  test_harness.dart  unit_test.dart
test/integration/: connect_existing_test.dart  isolate_integration_test.dart  pion_bridge_integration_test.dart
test/unit/: unit_test.dart
windows/: CMakeLists.txt  pionbridge_plugin.cpp  pionbridge_plugin.h
(+8 files in other folders)
